SpanishAcademy/Content/css/creative.css
/*!
 * Start Bootstrap - Creative v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/creative)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
 */
body,
html {
    width: 100%;
    height: 100%;
}

body {
    font-family: 'Plex', 'Helvetica Neue', Arial, sans-serif;
}

hr {
    max-width: 50px;
    border-width: 3px;
    border-color: #c60b1e;
}

    hr.light {
        border-color: #ffc400;
    }

a {
    color: #c60b1e;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    transition: all 0.2s;
}

    a:hover {
        color: #c60b1e;
    }

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

.bg-primary {
    background-color: #c60b1e !important;
}

.bg-dark {
    background-color: #212529 !important;
}

.bg-yellow {
    background-color: #ffc400 !important;
}

.text-faded {
    color: rgba(255, 255, 255, 0.7);
}

.text-red {
    color: #c60b1e;
}

.text-yellow {
    color: #ffc400;
}

section {
    padding: 8rem 0;
}

.section-heading {
    margin-top: 0;
}

::-moz-selection {
    color: #fff;
    background: #212529;
    text-shadow: none;
}

::selection {
    color: #fff;
    background: #212529;
    text-shadow: none;
}

img::selection {
    color: #fff;
    background: transparent;
}

img::-moz-selection {
    color: #fff;
    background: transparent;
}

body {
    -webkit-tap-highlight-color: #212529;
}

#mainNav {
    border-bottom: 1px solid rgba(33, 37, 41, 0.1);
    background-color: #ffc400;
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    transition: all 0.2s;
}

    #mainNav .navbar-brand {
        font-weight: 700;
        text-transform: uppercase;
        color: #c60b1e;
        font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
    }

        #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
            color: #c60b1e;
        }

    #mainNav .navbar-nav > li.nav-item > a.nav-link,
    #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
        font-size: .9rem;
        font-weight: 700;
        text-transform: uppercase;
        color: #212529;
    }

        #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
        #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
            color: #c60b1e;
        }

        #mainNav .navbar-nav > li.nav-item > a.nav-link.active,
        #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
            color: #c60b1e !important;
            background-color: transparent;
        }

            #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover,
            #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover {
                background-color: transparent;
            }

@media (min-width: 992px) {
    #mainNav {
        border-color: transparent;
        background-color: transparent;
    }

        #mainNav .navbar-brand {
            color: #c60b1e;
            text-shadow: 1px 1px 0px #ffc400;
        }

            #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
                color: #ffc400;
            }

        #mainNav .navbar-nav > li.nav-item > a.nav-link {
            padding: 0.5rem 1rem;
        }

            #mainNav .navbar-nav > li.nav-item > a.nav-link,
            #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
                color: rgba(255, 255, 255, 0.7);
            }

                #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
                #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
                    color: #ffc400;
                }

        #mainNav.navbar-shrink {
            border-bottom: 1px solid rgba(33, 37, 41, 0.1);
            background-color: #ffc400;
        }

            #mainNav.navbar-shrink .navbar-brand {
                color: #c60b1e;
            }

                #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
                    color: #c60b1e;
                }

            #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
            #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
                color: #212529;
            }

                #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
                #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
                    color: #c60b1e;
                }
}

header.masthead {
    padding-top: 10rem;
    padding-bottom: calc(10rem - 56px);
    background-image: url("../img/header.jpg");
    background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

    header.masthead hr {
        margin-top: 30px;
        margin-bottom: 30px;
    }

    header.masthead h1 {
        font-size: 2rem;
    }

    header.masthead p {
        font-weight: 300;
    }

@media (min-width: 768px) {
    header.masthead p {
        font-size: 1.15rem;
    }
}

@media (min-width: 992px) {
    header.masthead {
        height: 100vh;
        min-height: 650px;
        padding-top: 0;
        padding-bottom: 0;
    }

        header.masthead h1 {
            font-size: 3rem;
        }
}

@media (min-width: 1200px) {
    header.masthead h1 {
        font-size: 4rem;
    }
}

.service-box {
    max-width: 400px;
}

.portfolio-box {
    position: relative;
    display: block;
    max-width: 650px;
    margin: 0 auto;
    padding: 2px;
}

    .portfolio-box .portfolio-box-caption {
        position: absolute;
        bottom: 0;
        display: block;
        width: 100%;
        height: 100%;
        text-align: center;
        opacity: 1;
        color: #ffc400;
        /*background: rgba(240, 95, 64, 0.9);*/
        -webkit-transition: all 0.2s;
        -moz-transition: all 0.2s;
        transition: all 0.2s;
    }

        .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
            position: absolute;
            top: 10%;
            width: 90%;
            transform: translateY(-90%);
            text-align: center;
        }

            .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
            .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
                padding: 0 15px;
                font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
            }

            .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
                text-align: center;
                font-size: 14px;
                background-color: #c60b1e;
                color: #ffc400;
            }

            .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
                font-size: 18px;
            }

    .portfolio-box:hover .portfolio-box-caption {
        background: rgba(240, 95, 64, 0.5);
        opacity: 0.7;
    }

    .portfolio-box:focus {
        outline: none;
    }

@media (min-width: 768px) {
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
        text-align: center;
        font-size: 14px;
        background-color: #c60b1e;
        color: #ffc400;
    }

    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        font-size: 22px;
    }
}

.text-primary {
    color: #c60b1e !important;
}

.btn {
    font-weight: 700;
    text-transform: uppercase;
    border: none;
    border-radius: 300px;
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

.btn-xl {
    padding: 1rem 2rem;
}

.btn-primary {
    background-color: #c60b1e;
    border-color: #c60b1e;
}

    .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
        color: #fff;
        background-color: #ee4b28 !important;
    }

    .btn-primary:active, .btn-primary:focus {
        box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
    }

.text-bordered {
    /*font-family: Raleway;*/
    font-weight: 900;
    text-shadow: 3px 3px 0px #000;
}

.div-fade {
    padding-top: 1em;
    background-color: rgba(200,0,0,0.8);
}

#test {
    border: 0;
    width: 800px;
    height: 8000px;
    position: relative;
    left: 100px;
    padding: 20px;
}

#outer {
    position: absolute;
    left: 100px;
    padding: 20px;
    background: #ffffff;
    opacity: .5;
    width: 800px;
    height: 8000px;
}

#inner {
    position: absolute;
    width: 800px;
    height: 40px;
    background: #ffffff;
}

body {
    /*background: url('http://www.arcmarks.com/arcmarks/images/grid.jpg');*/
}

.table td, .table th {
    border-top: 1px solid rgb(128, 128, 128);
}

.centeredtext {
    position: absolute;
    top: 90%;
    left: 50%;
    transform: translate(-50%, -50%);
}

